Implemented /results/ POST, fully tested with documentation
